self_hosted/k8s/gitea/database.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea-db
  namespace: production
spec:
  selector:
    app: gitea-db
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: gitea-db
  namespace: production
spec:
  serviceName: gitea-db
  replicas: 1
  selector:
    matchLabels:
      app: gitea-db
  template:
    metadata:
      labels:
        app: gitea-db
    spec:
      containers:
        - name: postgres
          image: postgres:14
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: gitea-db-data-pvc
