self_hosted/k8s/gitea/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea
  namespace: production
spec:
  selector:
    app: gitea
  ports:
    - name: http
      port: 3000
      targetPort: 3000
    - name: ssh
      port: 2222
      targetPort: 2222
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea
  namespace: production
spec:
  replicas: 0
  selector:
    matchLabels:
      app: gitea
  template:
    metadata:
      labels:
        app: gitea
    spec:
      containers:
        - name: gitea
          image: docker.gitea.com/gitea:1.23.8-rootless
          ports:
            - containerPort: 3000
              name: http
            - containerPort: 2222
              name: ssh
          volumeMounts:
            - name: gitea-data
              mountPath: /var/lib/gitea
            - name: gitea-config
              mountPath: /etc/gitea
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
      volumes:
        - name: gitea-data
          persistentVolumeClaim:
            claimName: gitea-data-pvc
        - name: gitea-config
          persistentVolumeClaim:
            claimName: gitea-config-pvc
  strategy:
    type: Recreate
